# Diskwatch

./: Dockerfile  README.md  dev.sh  docker-compose.yml  pyproject.toml  pyproject.toml.ori  readme
app/: diskwatch.py  diskwatch.pyori
src/diskwatch/: __main__.py
src/diskwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
