[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "diskwatch"
version = "0.1.0"
description = "A modern terminal disk usage analyzer built with Textual."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Kenemi" }
]

license = "MIT"

keywords = [
    "disk",
    "storage",
    "filesystem",
    "terminal",
    "textual",
    "tui",
    "linux"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

dependencies = [
    "psutil",
    "rich",
    "textual",
]

[project.urls]
Homepage = "https://github.com/Kevinwg02/Diskwatch"
Repository = "https://github.com/Kevinwg02/Diskwatch"
Issues = "https://github.com/Kevinwg02/Diskwatch/issues"

[project.scripts]
diskwatch = "diskwatch.diskwatch:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
